-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b13
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263737 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8264122 | 11.0.12 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
There's a potential issue in reg split. This function of split_USE does not generate spill copy in some cases. But the caller always assume it will create new spill copy. So the caller may skip some instruction.
- backported by
-
JDK-8263737 handle split_USE correctly
-
- Resolved
-
-
JDK-8264122 handle split_USE correctly
-
- Resolved
-