8262837: handle split_USE correctly